# capstone_project_django

./: README.md  manage.py  pyproject.toml
capstone_project_django/: asgi.py  settings.py  urls.py  wsgi.py
