[tool.poetry]
name = "capstone_project_django"
version = "0.1.0"
description = "capstone"
authors = ["downinahill <brian.hill.0023@gmail.com>"]
license = "proprietary"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
